# ds-unidad-2-actividad-2-listasdobleenlazadas-2430012

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
include/: ListaDeCarga.h  RotorDeMapeo.h  TramaBase.h  TramaLoad.h  TramaMap.h
src/: ListaDeCarga.cpp  RotorDeMapeo.cpp
